--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bus",
-  "version": "0.0.0",
+  "name": "@myntra/bus",
+  "version": "1.0.0",
   "description": "a global event bus. ",
   "main": "index.js",
   "scripts": {
